Fix fowm visible

--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,3 @@
-.tech-form {
-  display: none;
-}
 .float-form {
   transition: all 0.4s;
   position: fixed;
